[metadata]
description_file = README.md
description = "Cellxgene Gateway"
author = "Niket Patel, Yohann Potier, Alok Saldanha"
author_email = "alok.saldanha@novartis.com"
long_description_content_type="text/markdown"
license = "MIT"
keywords ="visualization, genomics"
url = "http://github.com/Novartis/cellxgene-gateway"
python_requires = ">=3.6"
classifier =
    "Topic :: Scientific/Engineering :: Visualization"

[options]
install_requires =
    cellxgene
    flask
    flask-api
    werkzeug
    psutil
    requests
    typer

[options.extras_require]
prometheus =
    prometheus-flask-exporter

[entry_points]
console_scripts =
    cellxgene-gateway = cellxgene_gateway.cli:run
